refactor: 启动程序调整